--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "jest",
+    "test:unit": "jest",
+    "test:integration": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts,.tsx",
