feat: add npx command for automated project setup
- Add bin/cli.js as main entry point for npx execution
- Implement comprehensive project setup in src/index.ts
- Add package-scripts utility for updating package.json scripts
- Update template-scanner to handle new file structure
- Add tests for package scripts functionality
- Configure package.json with bin entry and main exports

--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "ai-coding-assistants-setup",
   "version": "2.0.5",
   "description": "Setup tool for integrating AI coding assistants into development workflows",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "ai-coding-assistants-setup": "./dist/index.js"
+    "ai-coding-assistants-setup": "./bin/index.js"
   },
+  "files": [
+    "bin/",
+    "src/",
+    "dist/"
+  ],
   "scripts": {
     "build": "tsc",
     "postbuild": "chmod +x dist/index.js",
@@ -56,6 +62,7 @@
     "jsonschema": "^1.4.1",
     "micromatch": "^4.0.5",
     "ora": "^7.0.1",
+    "prompts": "^2.4.2",
     "semver": "^7.5.4",
     "winston": "^3.11.0"
   },
@@ -63,6 +70,7 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/fs-extra": "^11.0.4",
+    "@types/inquirer": "9.0.8",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "4.0.9",
     "@types/node": "^20.11.16",
