chore: update project configuration files
- Update ESLint and Prettier configurations
- Update environment variables template
- Update gitignore patterns
- Update Husky hooks configuration
- Update MCP and Claude settings
- Update memory knowledge graph

--- a/.env.example
+++ b/.env.example
@@ -1,50 +1,110 @@
-# Core API Keys
-# ===============
+# API Keys and Tokens
+GITHUB_PERSONAL_ACCESS_TOKEN="xxxxxxxx # Also used as PAT in GitHub Actions"
+CONTEXT7_API_KEY=xxxxxxxx
+BRAVE_API_KEY=xxxxxxxx
+ANTHROPIC_API_KEY="xxxxxxxx # Also used in GitHub Actions"
+OPENAI_API_KEY="xxxxxxxx # (optional) but if given, should configure roo to use either claude or gpt"
 
-# GitHub Personal Access Token (Required)
-# Used for: Repository operations, API access
-# Create at: https://github.com/settings/tokens
-GITHUB_PERSONAL_ACCESS_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxx
+# Jira Integration (optional)
+JIRA_API_TOKEN="xxxxxxxx # (optional) Required for Jira integration"
+JIRA_AUTOMATION_WEBHOOK="xxxxxxxx # (optional) General Jira webhook"
+JIRA_AUTOMATION_WEBHOOK_DEV="xxxxxxxx # (optional) Environment-specific Jira webhook for dev"
+JIRA_AUTOMATION_WEBHOOK_STAGING="xxxxxxxx # (optional) Environment-specific Jira webhook for staging"
+JIRA_AUTOMATION_WEBHOOK_PRODUCTION="xxxxxxxx # (optional) Environment-specific Jira webhook for production"
+JIRA_BASE_URL="https://your-company.atlassian.net # (optional) Jira instance URL"
+JIRA_USER_EMAIL="your-email@example.com # (optional) Jira user email"
+JIRA_PROJECT_KEY="PROJ # (optional) Jira project key"
 
-# Anthropic Claude API Key (Optional)
-# Used for: AI-powered features in your development workflow
-# Enables: Claude AI code review, security scanning, and other AI features
-# Get from: https://console.anthropic.com/account/keys
-ANTHROPIC_API_KEY=sk-ant-xxxxxxxxxxxxxxxxxxxx
+# AWS Configuration for E2E Tests
+AWS_PROFILE=gemini-dev-v2
+AWS_REGION=us-east-1
+CDK_CONTEXT_ENV=dev
+CDK_CONTEXT_ACCOUNT=017820663466
 
-# Optional API Keys
-# =================
+# Optional: Override default E2E test data
+# E2E_ORG_ID=9ba563db-9796-4a82-ad5f-57d7d4a76a92
+# E2E_LUKE_SHAW_ID=1bc5dc7f-e73e-4a58-be52-4cf9073ec975
 
-# Context7 API Key (Optional)
-# Used for: Enhanced documentation lookup and context retrieval
-CONTEXT7_API_KEY=your-context7-key
+# LangSmith Configuration
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
+LANGSMITH_API_KEY="your-api-key-here"
+LANGSMITH_PROJECT="serverless-knowledge-platform"
+LANGCHAIN_CALLBACKS_BACKGROUND=false  # CRITICAL for Lambda
 
-# Brave Search API Key (Optional)
-# Used for: Web search capabilities
-# Get from: https://api.search.brave.com/app/keys
-BRAVE_API_KEY=your-brave-key
+# =============================================================================
+# GITHUB ACTIONS SECRETS & VARIABLES (Missing from current configuration)
+# =============================================================================
+# These are referenced in .github/workflows but not currently configured
+# Repository Secrets: https://github.com/geminisportsai/player-graphrag-graph-bot/settings/secrets/actions
+# Organization Secrets: https://github.com/organizations/geminisportsai/settings/secrets/actions
+# Repository Variables: https://github.com/geminisportsai/player-graphrag-graph-bot/settings/variables/actions
+# Organization Variables: https://github.com/organizations/geminisportsai/settings/variables/actions
 
-# OpenAI API Key (Optional)
-# Used for: Alternative AI provider support
-# Note: If provided, configure Roo to use either Claude or GPT
-# Get from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxx
+# Security & Analysis Tools (Optional - workflows will skip if not configured)
+SONAR_TOKEN="xxxxxxxx # (optional) SonarCloud static analysis - workflows skip if missing"
+SNYK_TOKEN="xxxxxxxx # (optional) Snyk dependency scanning - workflows skip if missing" 
+GITGUARDIAN_API_KEY="xxxxxxxx # (optional) GitGuardian secret detection - workflows skip if missing"
+FOSSA_API_KEY="xxxxxxxx # (optional) FOSSA license compliance - workflows skip if missing"
 
-# Firecrawl API Key (Optional)
-# Used for: Advanced web scraping and content extraction
-# Get from: https://www.firecrawl.dev/app/api-keys
-FIRECRAWL_API_KEY=your-firecrawl-key
+# Performance Testing (Optional)
+K6_CLOUD_TOKEN="xxxxxxxx # (optional) k6 Cloud performance testing"
+CUSTOM_HEADERS="xxxxxxxx # (optional) Custom headers for k6 testing"
 
-# Jira Integration Configuration
-# Define your Jira project key pattern(s)
-# This is used by the commit-msg hook to auto-append Jira keys to commit messages
-# 
-# Examples:
-# Single project key:
-# JIRA_PROJECT_KEY="SE"
+# Release Signing (Optional - for signed releases)
+RELEASE_SIGNING_KEY="xxxxxxxx # (optional) Base64 encoded GPG private key for release signing"
+SIGNING_KEY_ID="xxxxxxxx # (optional) GPG key ID for release signing"
+SIGNING_KEY_PASSPHRASE="xxxxxxxx # (optional) GPG key passphrase for release signing"
+
+# AWS Account IDs (Environment-specific)
+AWS_ACCOUNT_ID="xxxxxxxx # Main/Production AWS account ID"
+AWS_ACCOUNT_ID_MAIN="xxxxxxxx # Production environment AWS account"
+AWS_ACCOUNT_ID_STAGING="xxxxxxxx # Staging environment AWS account" 
+AWS_ACCOUNT_ID_DEV="xxxxxxxx # Development environment AWS account"
+
+# =============================================================================
+# CONFIGURED SECRETS/VARIABLES STATUS
+# =============================================================================
+# ✅ CONFIGURED (Repository):
+#   - ANTHROPIC_API_KEY
+#   - OPENAI_API_KEY  
+#   - LANGSMITH_API_KEY
+#   - LANGSMITH_ENDPOINT
+#   - LANGSMITH_PROJECT
+#   - LANGSMITH_TRACING
+#   - AWS_ACCOUNT_ID
+#   - AWS_ACCOUNT_ID_DEV
+#   - AWS_ACCESS_KEY_ID
+#   - AWS_SECRET_ACCESS_KEY
 #
-# Multiple project keys (using regex OR):
-# JIRA_PROJECT_KEY="SE|PROJ|ABC"
+# ✅ CONFIGURED (Organization):
+#   - JIRA_API_TOKEN
+#   - JIRA_AUTOMATION_WEBHOOK (+ environment variants)
+#   - JIRA_BASE_URL (variable)
+#   - JIRA_PROJECT_KEY (variable) 
+#   - JIRA_USER_EMAIL (variable)
+#   - PAT (Personal Access Token)
+#   - SENTRY_AUTH_TOKEN
+#   - SONAR_TOKEN
+#   - AWS_ACCOUNT_ID_MAIN
+#   - AWS_ACCOUNT_ID_STAGING
+#   - AWS_ACCOUNT_ID_DEV
 #
-# Default pattern (matches any 2-10 uppercase letters):
-# JIRA_PROJECT_KEY="[A-Z]{2,10}"
+# ❌ MISSING (Referenced in workflows but not configured):
+#   - SONAR_TOKEN (org has it, but workflows expect it at repo level too)
+#   - SNYK_TOKEN
+#   - GITGUARDIAN_API_KEY  
+#   - FOSSA_API_KEY
+#   - K6_CLOUD_TOKEN
+#   - CUSTOM_HEADERS
+#   - RELEASE_SIGNING_KEY
+#   - SIGNING_KEY_ID
+#   - SIGNING_KEY_PASSPHRASE
+#   - SENTRY_ORG (configured as org secret, workflows expect as variable)
+#   - SENTRY_PROJECT (configured as org secret, workflows expect as variable)
+#
+# 📝 NOTES:
+#   - GITHUB_TOKEN is automatically provided by GitHub Actions
+#   - Some secrets are optional and workflows will skip features if not present
+#   - Consider moving SENTRY_ORG and SENTRY_PROJECT from secrets to variables
+#   - Repository-level secrets override organization-level secrets
