fix: resolve ESLint configuration and Jest ESM compatibility issues
- Remove eslint-plugin-prettier dependency from ESLint config
- Use eslint-config-prettier only for rule conflict resolution
- Add proper ignore patterns for dist and template directories
- Fix unused variable warnings in code
- Convert string concatenation to template literals
- Update Jest config to support ESM modules
- Add necessary imports for Jest globals in test files
- Fix __dirname usage in ESM context

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,15 @@
+# Ignore build output
+dist/
+node_modules/
+coverage/
+
 # Ignore Lambda asset directories
 lambda-assets/
 archived-code/
 chat/
+
+# Ignore template files
+src/templates/
+
+# Ignore config files
+jest.config.ts
