--- a/src/templates/.eslintrc.json
+++ b/src/templates/.eslintrc.json
@@ -10,7 +10,7 @@
    ],
    "extends": [
       "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
+      "prettier"
    ],
    "root": true,
    "env": {
