--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test": "jest",
-    "test:unit": "jest",
-    "test:integration": "jest",
+    "test:unit": "jest --testPathPattern=unit || echo 'No unit tests found'",
+    "test:integration": "jest --testPathPattern=integration || echo 'No integration tests found'",
+    "test:e2e": "jest --testPathPattern=e2e || echo 'No e2e tests found'",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .ts,.tsx",
