fix: simplify GitHub release tag checkout in publish workflow
Replace the two-step checkout process with a direct ref parameter in the
checkout action. This ensures the tag is properly fetched and checked out
in a single step, preventing potential issues with tag availability.

The previous approach used a separate step to fetch and checkout the tag
after the initial checkout, which could fail if the tag wasn't properly
synchronized. Using the ref parameter directly is more reliable and follows
GitHub Actions best practices.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,19 +64,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: 🏷️ Fetch latest tag
-        run: |
-          # Fetch all tags from remote
-          git fetch --tags
-          
-          # Checkout the specific tag created by the release job
-          if [ -n "${{ needs.release.outputs.tag }}" ]; then
-            echo "Checking out tag: ${{ needs.release.outputs.tag }}"
-            git checkout ${{ needs.release.outputs.tag }}
-          else
-            echo "No tag output from release job, using current commit"
-          fi
+          ref: ${{ needs.release.outputs.tag || github.sha }}
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
