--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,14 +57,32 @@ jobs:
   publish_npm:
     name: 📦 Publish to npm
     needs: [determine_environment, release]
-    if: ${{ needs.determine_environment.outputs.environment == 'main' && !contains(github.event.head_commit.message, '[skip ci]') }}
+    if: ${{ needs.determine_environment.outputs.environment == 'main' && !contains(github.event.head_commit.message, '[skip ci]') && needs.release.outputs.release_url != '' }}
     runs-on: ubuntu-latest
     steps:
+      - name: 🏷️ Wait for tag to be available
+        run: |
+          echo "Waiting for tag ${{ needs.release.outputs.tag }} to be available..."
+          for i in {1..30}; do
+            if git ls-remote --tags origin | grep -q "refs/tags/${{ needs.release.outputs.tag }}"; then
+              echo "Tag ${{ needs.release.outputs.tag }} is now available"
+              break
+            fi
+            echo "Attempt $i/30: Tag not found yet, waiting 10 seconds..."
+            sleep 10
+          done
+          
+          # Final check
+          if ! git ls-remote --tags origin | grep -q "refs/tags/${{ needs.release.outputs.tag }}"; then
+            echo "Error: Tag ${{ needs.release.outputs.tag }} is still not available after 5 minutes"
+            exit 1
+          fi
+
       - name: 📥 Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ needs.release.outputs.tag || github.sha }}
+          ref: ${{ needs.release.outputs.tag }}
 
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
