fix: remove release_url condition from publish job
Removed the problematic condition that was causing the publish job to be skipped when the GitHub Release job was skipped due to workflow dependencies. The publish job now only checks for the release tag condition, ensuring npm packages are published even when the GitHub Release creation is skipped.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
   publish_npm:
     name: 📦 Publish to npm
     needs: [determine_environment, release]
-    if: ${{ needs.determine_environment.outputs.environment == 'main' && !contains(github.event.head_commit.message, '[skip ci]') && needs.release.outputs.release_url != '' }}
+    if: ${{ needs.determine_environment.outputs.environment == 'main' && !contains(github.event.head_commit.message, '[skip ci]') }}
     runs-on: ubuntu-latest
     steps:
       - name: 🏷️ Wait for tag to be available
