fix: ensure GitHub Release job runs when release signing is skipped
The github_release job was being skipped when release_signing was skipped
because it had a hard dependency on release_signing. This caused the v3.0.0
tag to never be created, which in turn caused the npm publish job to timeout
waiting for a tag that would never appear.

Added conditional logic to github_release job to handle both success and
skipped states for the release_signing dependency.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -911,6 +911,12 @@ jobs:
   github_release:
     name: 🎉 Create GitHub Release
     needs: [release_init, version, release_signing, release_attestation]
+    if: |
+      always() &&
+      !cancelled() &&
+      needs.version.result == 'success' &&
+      needs.release_attestation.result == 'success' &&
+      (needs.release_signing.result == 'success' || needs.release_signing.result == 'skipped')
     runs-on: ubuntu-latest
     outputs:
       release_url: ${{ steps.create_release.outputs.html_url }}
