fix: add error handling and permissions for GitHub release creation
- Added error handling to detect GitHub API failures when creating releases
- Added proper permissions (contents: write) to allow release and tag creation
- Added logging to help debug release creation issues
- The lack of permissions was likely preventing the v3.0.0 tag from being created

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,13 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Required permissions for creating releases
+permissions:
+  contents: write
+  packages: write
+  issues: write
+  pull-requests: write
+
 jobs:
   # Environment setup
   determine_environment:
