fix: update package.json version before npm publish
- The release workflow now updates package.json when determining the version
- The publish workflow also updates package.json before publishing as a safety measure
- This fixes the issue where npm publish was trying to publish an old version
- The root cause was that the tag was created without updating package.json

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -104,6 +104,15 @@ jobs:
       - name: 🏗️ Build package
         run: npm run build
 
+      - name: 📝 Update package version
+        run: |
+          # Update package.json to match the release version
+          VERSION="${{ needs.release.outputs.version }}"
+          if [ -n "$VERSION" ]; then
+            echo "Updating package.json to version $VERSION"
+            npm version $VERSION --no-git-tag-version --allow-same-version
+          fi
+
       - name: 🔍 Check npm token
         id: check-npm-token
         run: |
