fix(prettier): remove global TypeScript parser to properly format markdown files
- Remove global "parser": "typescript" configuration
- Add overrides to use markdown parser for .md files
- Update both main and template prettier configs

This fixes prettier errors when formatting markdown files that were being
incorrectly parsed as TypeScript due to the global parser setting.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,7 +9,14 @@
   "semi": true,
   "singleQuote": false,
   "quoteProps": "as-needed",
-  "parser": "typescript",
   "htmlWhitespaceSensitivity": "css",
-  "singleAttributePerLine": false
+  "singleAttributePerLine": false,
+  "overrides": [
+    {
+      "files": "*.md",
+      "options": {
+        "parser": "markdown"
+      }
+    }
+  ]
 }
